# cpplox

./: .gitignore  CMakeLists.txt  Makefile  README.md
aux/: fmt.sh  script.lox  script2.lox
include/: Literal.h  Lox.h  Scanner.h  Token.h  TokenType.h  expressions.hpp  lox.h  scanner.h  token.h  token_type.h
src/: Literal.cpp  Lox.cpp  Scanner.cpp  Token.cpp  TokenType.cpp  lox.cpp  lox.h  main.cpp  scanner.cpp  scanner.h  token.cpp  token.h  token_type.cpp  token_type.h
